tests/snapshots/purity_parity/purity_parity__C__102_effect_row_subtract_var_satisfied_ok.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/102_effect_row_subtract_var_satisfied_ok.flx
Category: C
Strict: false
Expect compile error: false

== vm command ==
$ flux --no-cache examples/type_system/102_effect_row_subtract_var_satisfied_ok.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/102_effect_row_subtract_var_satisfied_ok.flx --jit
exit_code: 1

== vm tuples ==
- E1001 | Not A Function | 

== jit tuples ==
- E1001 | Not A Function | 

== parity ==
match

== mismatch_debug ==
<none>
