tests/snapshots/purity_parity/purity_parity__C__166_effect_row_absent_ordering_linked_ok.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/166_effect_row_absent_ordering_linked_ok.flx
Category: C
Strict: false
Expect compile error: false

== vm command ==
$ flux --no-cache examples/type_system/166_effect_row_absent_ordering_linked_ok.flx
exit_code: 0

== jit command ==
$ flux --no-cache examples/type_system/166_effect_row_absent_ordering_linked_ok.flx --jit
exit_code: 0

== vm tuples ==
<none>

== jit tuples ==
<none>

== parity ==
match

== mismatch_debug ==
<none>
