tests/snapshots/purity_parity/purity_parity__C__194_effect_row_multi_missing_deterministic_e400.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx
Category: C
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx --jit
exit_code: 1

== vm tuples ==
- E400 | Missing Ambient Effect | effectful call occurs here

== jit tuples ==
- E400 | Missing Ambient Effect | effectful call occurs here

== parity ==
match

== mismatch_debug ==
<none>
