tests/snapshots/purity_parity/purity_parity__C__195_effect_row_invalid_subtract_e421.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/195_effect_row_invalid_subtract_e421.flx
Category: C
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict examples/type_system/failing/195_effect_row_invalid_subtract_e421.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict examples/type_system/failing/195_effect_row_invalid_subtract_e421.flx --jit
exit_code: 1

== vm tuples ==
- E300 | Parameter Type Mismatch | parameter 1 has type `() -> Unit with Console, IO`

== jit tuples ==
- E300 | Parameter Type Mismatch | parameter 1 has type `() -> Unit with Console, IO`

== parity ==
match

== mismatch_debug ==
<none>
